--- a/app/src/main/res/layout/dialog_complication.xml
+++ b/app/src/main/res/layout/dialog_complication.xml
@@ -1,44 +1,65 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#ffffffff"
-    android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ImageView
-        android:id="@+id/warning_icon_emergency"
+    <data>
+        <variable
+            name="viewmodel"
+            type="com.app.craniowake.view.viewModel.ComplicationViewModel" />
+    </data>
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:background="#DA5F6A"
-        android:contentDescription="@string/header_model_red"
-        android:gravity="center"
-        android:scaleType="fitCenter"
-        android:src="@android:drawable/stat_sys_warning" />
-
-    <TextView
-        android:id="@+id/text_dialog_emergency"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/warning_icon_emergency"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="4dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginBottom="20dp"
-        android:gravity="center_horizontal"
-        android:hint="@string/a_complication_has_been_noted"
-        android:textColor="#ff000000"
-        android:textSize="26sp" />
+        android:background="#ffffffff"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btn_dialog_complication"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/text_dialog_emergency"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
-        android:background="#DA5F6A"
-        android:gravity="center_vertical|center_horizontal"
-        android:text="@string/ok"
-        android:textColor="#FFFFFF" />
+        <ImageView
+            android:id="@+id/warning_icon_emergency"
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:background="#DA5F6A"
+            android:contentDescription="@string/header_model_red"
+            android:gravity="center"
+            android:scaleType="fitCenter"
+            android:src="@android:drawable/stat_sys_warning" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/text_dialog_emergency"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/warning_icon_emergency"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginBottom="20dp"
+            android:gravity="center_horizontal"
+            android:hint="@string/a_complication_has_been_noted"
+            android:textColor="#ff000000"
+            android:textSize="26sp" />
+
+        <!-- TODO: Drüber nachdenken, ob man hier einen custom AUTOFILL_HINT erstellen kann, sodass mögliche Eingaben für diese Feld gespeichert werden -->
+        <EditText
+            android:id="@+id/complication_note"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_below="@id/text_dialog_emergency"
+            android:ems="10"
+            android:text="@={viewmodel.text}"
+            android:hint="@string/complication_note_hint"
+            android:gravity="start|top"
+            android:inputType="textMultiLine" />
+
+        <Button
+            android:id="@+id/btn_dialog_complication"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/complication_note"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="20dp"
+            android:background="#DA5F6A"
+            android:gravity="center_vertical|center_horizontal"
+            android:text="@string/ok"
+            android:textColor="#FFFFFF" />
+
+    </RelativeLayout>
+</layout>
